# Acacia

./: .gitignore  .gitmodules  CMakeLists.txt  Ebony.sln  Ebony.vcxproj  Ebony.vcxproj.filters  LICENSE  README.md  copy-assets.cmake
AssetConverter/: CMakeLists.txt  asset_main.cpp
AssetLib/: CMakeLists.txt  asset_load.hpp  asset_loader.cpp  mesh_asset.cpp  mesh_asset.hpp  prefab_asset.hpp  texture_asset.cpp  texture_asset.hpp
Audio/: CMakeLists.txt  copy-assets.cmake
Audio/src/: AudioType.hpp  EmptySoundDevice.hpp  MusicBuffer.cpp  MusicBuffer.hpp  MusicSource.cpp  MusicSource.hpp  SoundBuffer.cpp  SoundBuffer.hpp  SoundDevice.cpp  SoundDevice.hpp  SoundSource.cpp  SoundSource.hpp  SoundStream.hpp  SourcePool.cpp  SourcePool.hpp  alhelpers.cpp  audioManager.cpp  audioManager.hpp  audioTestMain.cpp  main.cpp
BrickBreaker/: BrickBreaker.cpp  CMakeLists.txt  copy-assets.cmake  joystickBindings.json  keyBindings.json  mouseBindings.json
BrickBreaker/components/: ballComponent.hpp  brickComponent.hpp  lifeComponent.hpp  powerupComponent.hpp  scoreComponent.hpp
BrickBreaker/misc/: aiInformationTypes.hpp  collisionLayers.hpp
BrickBreaker/prefabs/: ballPrefab.hpp  brickPrefab.hpp  buttonPrefab.hpp  buttonTextPrefab.hpp  lifePrefab.hpp  logoPrefab.hpp  mainMusicPrefab.hpp  menuCursorPrefab.hpp  paddlePrefab.hpp  powerupPrefab.hpp  scorePrefab.hpp  startButtonPrefab.hpp  wallPrefab.hpp
BrickBreaker/pythonScripts/: main.py  main_copy.py  mid_complete_main.py  mock_env.py
BrickBreaker/screens/: gameScreen.cpp  gameScreen.hpp  highScoreScreen.cpp  mainScreen.cpp  mainScreen.hpp  screenEnums.hpp
BrickBreaker/scripts/: DeathScript.hpp
BrickBreaker/singletons/: GameManager.cpp  GameManager.hpp  PythonManager.cpp  PythonManager.hpp
BrickBreaker/systems/: aiSystem.cpp  aiSystem.hpp  ballSystem.cpp  ballSystem.hpp  lifePointSystem.cpp  lifePointSystem.hpp
Crypt/: CMakeLists.txt  Crypt.cpp  copy-assets.cmake
Crypt/components/: aimComponent.hpp  bulletComponent.hpp  enemyComponent.hpp  enemyDetectionComponent.hpp  playerComponent.hpp  selectedSpellComponent.hpp  shootingComponent.hpp
Crypt/misc/: aiInformationTypes.hpp  collisionLayers.hpp  cryptTiledProcessor.cpp  cryptTiledProcessor.hpp
Crypt/prefabs/: batPrefab.hpp  bulletPrefab.hpp  crosshair.hpp  crosshairPrefab.hpp  explosionDeathPrefab.hpp  gameCompletePrefab.hpp  gameOverControlsPrefab.hpp  groundPrefab.hpp  healthBarPrefab.hpp  mainMusicPrefab.hpp  menuCursorPrefab.hpp  playerPrefab.hpp  suicideBirdPrefab.hpp
Crypt/pythonScripts/: agent.py  credit.txt  crypt_main.py  main.py  main_old.py  mock_env.py  replay_memory.py  testPythonScript.py
Crypt/screens/: controlsScreen.cpp  controlsScreen.hpp  gameOverScreen.cpp  gameOverScreen.hpp  highScoreScreen.cpp  highScoreScreen.hpp  mainGameScreen.cpp  mainGameScreen.hpp  mainMenuScreen.cpp  mainMenuScreen.hpp  optionsMenuScreen.cpp  optionsMenuScreen.hpp  pauseScreen.cpp  pauseScreen.hpp  screenEnums.hpp
Crypt/scripts/: crosshairPositionScript.hpp  healthBarUpdateScript.hpp  playerHealthUpdateScript.hpp  playerScoreUpdateScript.hpp  shootingBatScript.hpp  suicideBatScript.hpp
Crypt/singletons/: CryptPythonManager.cpp  CryptPythonManager.hpp  GameManager.cpp  GameManager.hpp
Crypt/systems/: aiSystem.cpp  aiSystem.hpp  bulletSystem.cpp  bulletSystem.hpp  enemyDetectionSystem.cpp  playerSystem.cpp  playerSystem.hpp  shootingSystem.cpp  shootingSystem.hpp
Ebony/: CMakeLists.txt  Ebony.hpp
Ebony/src/: Application.cpp  Application.hpp  Core.hpp  Ebony.hpp  EntryPoint.hpp  Log.cpp  Log.hpp  animation.hpp  animation2d.cpp  animation2d.hpp  animationControllerComponent.hpp  component.hpp  entity.cpp  entity.hpp  system.cpp  system.hpp
EcologyRTS/: CMakeLists.txt  EcologyRTS.cpp
EcologyRTS/components/: selectedTile.hpp  tile.hpp
EcologyRTS/misc/: aiInformationTypes.hpp  collisionLayers.hpp  ecologyTiledProcessor.cpp  ecologyTiledProcessor.hpp  tileType.hpp
EcologyRTS/prefabs/: cursorFollowingTile.hpp  mainGameCursor.hpp  mainMusicPrefab.hpp  menuCursorPrefab.hpp  mountainTile.hpp  player.hpp
EcologyRTS/screens/: controlsScreen.cpp  controlsScreen.hpp  gameOverScreen.cpp  gameOverScreen.hpp  highScoreScreen.cpp  highScoreScreen.hpp  mainGameScreen.cpp  mainGameScreen.hpp  mainMenuScreen.cpp  mainMenuScreen.hpp  optionsMenuScreen.cpp  optionsMenuScreen.hpp  pauseScreen.cpp  pauseScreen.hpp  screenEnums.hpp
EcologyRTS/singletons/: EcologyPythonManager.cpp  EcologyPythonManager.hpp  GameManager.cpp  GameManager.hpp
EcologyRTS/systems/: aiSystem.hpp
Graphics/: CMakeLists.txt  copy-assets.cmake
Graphics/models/: backpack.mtl
Graphics/shaders/: font.frag  font.vert  framebuffers.frag  framebuffers.vert  lightcube.frag  lightcube.vert  lighting.frag  lighting.vert  lightingTexture.frag  lightingTexture.vert  modelLoading.frag  modelLoading.vert  particle.frag  particle.vert  screenTexture.frag  screenTexture.vert  sprite.frag  sprite.vert  spritesheet.frag  spritesheet3d.frag  spritesheet3d.vert  triangle.frag  triangle.vert
Graphics/src/: camera.cpp  camera.hpp  colors.cpp  colors.hpp  framebuffermain.cpp  graphics.hpp  graphics2d.cpp  graphics2d.hpp  input.cpp  input.hpp  main.cpp  mainold.cpp  mesh.cpp  mesh.hpp  model.cpp  model.hpp  particleGenerator.cpp  particleGenerator.hpp  renderTarget2d.cpp  renderTarget2d.hpp  resourceManager.cpp  resourceManager.hpp  shader.cpp  shader.hpp  spriteRenderer.hpp  spritefont.cpp  spritefont.hpp  spritesheet.hpp  subtexture2d.cpp  subtexture2d.hpp  testmain.cpp  texture.cpp  texture.hpp  vk_textures.cpp  vk_textures.hpp  window.cpp  window.hpp
Graphics/textures/: Better_Character_Animation.tx  awesomeface.tx  box_emission.tx  box_specular.tx  container.tx  massiveTextureAtlas.tx  particle.tx  test.tx  wall.tx
Sandbox/: CMakeLists.txt  Sandbox.vcxproj  SandboxApplication.cpp  controllerBindings.json
Sandbox/src/: SandboxApplication.cpp
SpaceGuy/: CMakeLists.txt  SpaceGuy.cpp  copy-assets.cmake
SpaceGuy/components/: bulletComponent.hpp  enemyDetectionComponent.hpp  (+5 more)
VulkanGraphicsOld/: CMakeLists.txt
(+405 files in other folders)
